@@ -2,6 +2,7 @@ package be15fintomatokatchupbe.campaign.query.service;
 
 
 import be15fintomatokatchupbe.campaign.command.domain.aggregate.constant.PipelineStepConstants;
+import be15fintomatokatchupbe.campaign.query.controller.ProposalReferenceListResponse;
 import be15fintomatokatchupbe.campaign.query.dto.mapper.*;
 import be15fintomatokatchupbe.campaign.query.dto.request.CampaignResultRequest;
 import be15fintomatokatchupbe.campaign.query.dto.request.ContractListRequest;
@@ -10,6 +11,7 @@ import be15fintomatokatchupbe.campaign.query.dto.response.*;
 import be15fintomatokatchupbe.campaign.query.mapper.CampaignQueryMapper;
 import be15fintomatokatchupbe.campaign.query.dto.mapper.ListupFormDTO;
 import be15fintomatokatchupbe.common.dto.Pagination;
+import be15fintomatokatchupbe.influencer.command.domain.aggregate.entity.Influencer;
 import be15fintomatokatchupbe.influencer.query.dto.response.CategoryDto;
 import be15fintomatokatchupbe.user.command.domain.aggregate.User;
 import lombok.AllArgsConstructor;
@@ -281,7 +283,7 @@ public class CampaignQueryService {
         List<UserInfo> userDto = campaignQueryMapper.findPipelineUser(pipelineId);
 
         /* 참고 목록 가져오기 */
-        List<ReferenceInfo> referenceDto = campaignQueryMapper.findPipeReference(pipelineId, PipelineStepConstants.PROPOSAL);
+        List<ReferenceDto> referenceDto = campaignQueryMapper.getReferenceList(quotationFormDto.getCampaignId(), PipelineStepConstants.PROPOSAL);
 
         /* 의견 가져오기 */
         List<IdeaInfo> ideaDto = campaignQueryMapper.findPipeIdea(pipelineId);
@@ -331,7 +333,7 @@ public class CampaignQueryService {
         List<UserInfo> userDto = campaignQueryMapper.findPipelineUser(pipelineId);
 
         /* 참고 목록 가져오기 */
-        List<ReferenceInfo> referenceDto = campaignQueryMapper.findPipeReference(pipelineId, PipelineStepConstants.QUOTATION);
+        List<ReferenceDto> referenceDto = campaignQueryMapper.getReferenceList(contractFormDto.getCampaignId(), PipelineStepConstants.QUOTATION);
 
         /* 의견 가져오기 */
         List<IdeaInfo> ideaDto = campaignQueryMapper.findPipeIdea(pipelineId);
@@ -383,7 +385,7 @@ public class CampaignQueryService {
         List<InfluencerRevenueInfo> influencerDto = campaignQueryMapper.findPipelineRevenueInfluencer(pipelineId);
 
         /* 참고 목록 가져오기 */
-        List<ReferenceInfo> referenceDto = campaignQueryMapper.findPipeReference(pipelineId, PipelineStepConstants.CONTRACT);
+        List<ReferenceDto> referenceDto = campaignQueryMapper.getReferenceList(revenueFormDto.getCampaignId(), PipelineStepConstants.CONTRACT);
 
         /* 의견 가져오기 */
         List<IdeaInfo> ideaDto = campaignQueryMapper.findPipeIdea(pipelineId);
@@ -429,9 +431,6 @@ public class CampaignQueryService {
             return null;
         }
 
-        // 날짜 포맷터 선언
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-
         // 2. 캠페인 유저 리스트 조회
         List<User> userList = campaignQueryMapper.selectCampaignUserList(detail.getClientCompanyId());
         detail.setUserList(userList);
@@ -444,16 +443,8 @@ public class CampaignQueryService {
         detail.setExpectedRevenue(totalExpectedRevenue);
 
 
-        BigDecimal avgProfitMargin = campaignQueryMapper.selectAverageExpectedProfitMargin(campaignId);
-
-        if (avgProfitMargin != null) {
-            detail.setExpectedProfitMargin(
-                    avgProfitMargin.multiply(BigDecimal.valueOf(100))
-                            .setScale(0, RoundingMode.HALF_UP)
-            );
-        } else {
-            detail.setExpectedProfitMargin(BigDecimal.ZERO);
-        }
+        float avgProfitMargin = campaignQueryMapper.selectAverageExpectedProfitMargin(campaignId);
+        detail.setExpectedProfitMargin(avgProfitMargin);
 
         String notes = campaignQueryMapper.selectCampaignNotes(campaignId);
         detail.setNotes(notes);
@@ -477,51 +468,50 @@ public class CampaignQueryService {
     public CampaignListResponse getPagedCampaigns(int page, int size, ContractListRequest request) {
         int offset = (page - 1) * size;
 
-        List<CampaignListDTO> campaigns = campaignQueryMapper.findPagedCampaigns(size, offset, request);
+        List<CampaignListsDTO> campaigns = campaignQueryMapper.findPagedCampaigns(size, offset, request);
+        if (campaigns.isEmpty()) {
+            Pagination pagination = Pagination.builder()
+                    .currentPage(page)
+                    .size(size)
+                    .totalPage(0)
+                    .totalCount(0)
+                    .build();
+
+            return CampaignListResponse.builder()
+                    .campaignList(Collections.emptyList())
+                    .pagination(pagination)
+                    .build();
+        }
+
         List<Long> campaignIds = campaigns.stream()
-                .map(CampaignListDTO::getCampaignId)
-                .distinct()
-                .toList();
+                .map(CampaignListsDTO::getCampaignId)
+                .collect(Collectors.toList());
 
-        if (!campaignIds.isEmpty()) {
-            List<PipelineStepStatusDto> steps = campaignQueryMapper.findPipelineStepsByCampaignIdsList(campaignIds, request);
+        List<PipelineStepsDto> stepsList = campaignQueryMapper.findPipelineStepsGroupedByCampaignIds(campaignIds);
 
-            Map<Long, List<PipelineStepDto>> stepMap = steps.stream()
-                    .collect(Collectors.groupingBy(
-                            PipelineStepStatusDto::getCampaignId,
-                            Collectors.mapping(
-                                    s -> new PipelineStepDto(s.getStepType(), s.getStartedAt()),
-                                    Collectors.toList()
-                            )
-                    ));
+        Map<Long, List<PipelineStepsDto>> stepMap = stepsList.stream()
+                .collect(Collectors.groupingBy(PipelineStepsDto::getCampaignId));
 
-            for (CampaignListDTO dto : campaigns) {
-                List<PipelineStepDto> stepList = stepMap.getOrDefault(dto.getCampaignId(), Collections.emptyList());
-                dto.setPipelineSteps(stepList);
-
-                // 사후관리는 제외 (총 7단계만 계산)
-                long completed = stepList.stream().filter(s -> s.getStartedAt() != null).count();
-                dto.setSuccessProbability((int) ((completed / 7.0) * 100));
-            }
+        for (CampaignListsDTO campaign : campaigns) {
+            List<PipelineStepsDto> steps = stepMap.getOrDefault(campaign.getCampaignId(), new ArrayList<>());
+            campaign.setPipelineSteps(steps);
         }
 
         int totalCount = campaignQueryMapper.getTotalSize(request);
-        log.info("totalcount : {}",totalCount);
 
         Pagination pagination = Pagination.builder()
                 .currentPage(page)
                 .size(size)
-                .totalPage((int) Math.ceil((double) totalCount /size))
+                .totalPage((int) Math.ceil((double) totalCount / size))
                 .totalCount(totalCount)
                 .build();
-
-
 
         return CampaignListResponse.builder()
                 .campaignList(campaigns)
                 .pagination(pagination)
                 .build();
     }
+
 
     public QuotationReferenceListResponse getQuotationReferenceList(Long campaignId) {
         List<ReferenceDto> contractReferenceList = campaignQueryMapper.getReferenceList(campaignId, PipelineStepConstants.QUOTATION);
@@ -631,11 +621,15 @@ public class CampaignQueryService {
         if (!campaignIds.isEmpty()) {
             List<PipelineStepStatusDto> steps = campaignQueryMapper.findPipelineStepsByCampaignIds(campaignIds);
 
+            for (PipelineStepStatusDto step : steps) {
+                log.info(step.toString());
+            }
+
             Map<Long, List<PipelineStepDto>> stepMap = steps.stream()
                     .collect(Collectors.groupingBy(
                             PipelineStepStatusDto::getCampaignId,
                             Collectors.mapping(
-                                    s -> new PipelineStepDto(s.getStepType(), s.getStartedAt()),
+                                    s -> new PipelineStepDto(s.getStepType(), s.getCreatedAt()),
                                     Collectors.toList()
                             )
                     ));
@@ -643,7 +637,12 @@ public class CampaignQueryService {
             for (CampaignListDTO dto : campaigns) {
                 List<PipelineStepDto> stepList = stepMap.getOrDefault(dto.getCampaignId(), Collections.emptyList());
                 dto.setPipelineSteps(stepList);
-                long completed = stepList.stream().filter(s -> s.getStartedAt() != null).count();
+                long completed = stepList.stream()
+                        .filter(s -> s.getStepType() != null)
+                        .map(s -> s.getStepType())
+                        .distinct()
+                        .count();
+
                 dto.setSuccessProbability((int) ((completed / 7.0) * 100));
             }
         }
@@ -663,6 +662,68 @@ public class CampaignQueryService {
         }
 
         return CampaignAiResponse.builder().campaignList(responseDto).build();
+    }
+
+    public ProposalReferenceListResponse getProposalReferenceList(Long campaignId) {
+        List<ReferenceDto> proposalReferenceList = campaignQueryMapper.getReferenceList(campaignId, PipelineStepConstants.PROPOSAL);
+
+        return ProposalReferenceListResponse.builder()
+                .referenceList(proposalReferenceList)
+                .build();
+    }
+
+    public ProposalDetailResponse getProposalDetail(Long pipelineId) {
+        /* 폼 정보 가져오기 */
+        /* 폼 가져오기 */
+        ProposalFormDTO proposalFormDTO = campaignQueryMapper.findProposalDetail(pipelineId);
+
+        /* 인풀루언서 가져오기 */
+        List<InfluencerProposalInfo> influencerDto = campaignQueryMapper.findPipelineProposalInfluencer(pipelineId);
+
+        /* 담당자 가져오기 */
+        List<UserInfo> userDto = campaignQueryMapper.findPipelineUser(pipelineId);
+
+        /* 참고 목록 가져오기 */
+        List<ReferenceDto> referenceDto = campaignQueryMapper.getReferenceList(proposalFormDTO.getCampaignId(), PipelineStepConstants.LIST_UP);
+
+        /* 의견 가져오기 */
+        List<IdeaInfo> ideaDto = campaignQueryMapper.findPipeIdea(pipelineId);
+
+        /* 조합하기 */
+        ProposalFormResponse form = ProposalFormResponse.builder()
+                .name(proposalFormDTO.getName())
+                .clientCompanyId(proposalFormDTO.getClientCompanyId())
+                .clientCompanyName(proposalFormDTO.getClientCompanyName())
+                .clientManagerId(proposalFormDTO.getClientManagerId())
+                .clientManagerName(proposalFormDTO.getClientManagerName())
+                .pipelineStatusId(proposalFormDTO.getPipelineStatusId())
+                .pipelineStatusName(proposalFormDTO.getPipelineStatusName())
+                .userList(userDto)
+                .campaignId(proposalFormDTO.getCampaignId())
+                .campaignName(proposalFormDTO.getCampaignName())
+                .requestAt(proposalFormDTO.getRequestAt())
+                .presentAt(proposalFormDTO.getPresentAt())
+                .startedAt(proposalFormDTO.getStartedAt())
+                .endedAt(proposalFormDTO.getEndedAt())
+                .influencerList(influencerDto)
+                .content(proposalFormDTO.getContent())
+                .notes(proposalFormDTO.getNotes())
+                .build();
+
+        /* 응답하기 */
+        return ProposalDetailResponse
+                .builder()
+                .form(form)
+                .referenceList(referenceDto)
+                .ideaList(ideaDto)
+                .build();
+    }
+
+    public ListupReferenceResponse getListupReferenceList(Long campaignId) {
+        List<ReferenceDto> referenceDto = campaignQueryMapper.getReferenceList(campaignId, PipelineStepConstants.LIST_UP);
+
+        return ListupReferenceResponse.builder()
+                .referenceList(referenceDto).build();
     }
 }
 
